--- a/style.css
+++ b/style.css
@@ -26,3 +26,35 @@ nav a {
 main {
     padding: 1rem;
 }
+
+h1, h2 {
+    text-align: center;
+    margin: 0.5em;
+}
+
+.topic-table {
+    width: 100%;
+    max-width: 80em;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+}
+
+.topic-table th, .topic-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.topic-table th {
+    background-color: #f2f2f2;
+}
+
+.center {
+    text-align: center;
+}
+
+button {
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+}
