--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
     font-family: sans-serif;
     margin: 0;
     display: flex;
@@ -34,9 +39,11 @@ body {
 }
 
 #main-content {
+    max-height: calc(100vh - 2em);
+    height: 100%;
     flex-grow: 1;
-    padding: 20px;
-    margin-left: 8.5em;
+    padding: 1em;
+    margin: 0 0 0 8.5em;
     transition: margin-left 0.3s;
 }
 
@@ -45,6 +52,7 @@ body {
 }
 
 #topic-list-view, #paper-list-view {
+    height: 100%;
     display: none;
     overflow-y: auto;
 }
@@ -74,14 +82,16 @@ th {
     margin-top: 1em;
 }
 
-#paper-detail-table {
-    width: 100%;
-    height: 100vh;
-    border: none;
+#paper-detail-view {
+    height: 100%;
 }
 
-#paper-detail-table td {
-    border: none;
+#paper-detail-info-table {
+    height: 100%;
+    margin: 0;
+}
+
+#paper-detail-view td {
     vertical-align: top;
 }
 
@@ -90,16 +100,9 @@ th {
     width: 1px;
 }
 
-#pdf-view {
-    width: 60%;
-}
-
-#summary-view {
-    width: 40%;
-    padding-left: 20px;
-}
-
 #summary-content {
     height: 100%;
-    overflow-y: auto;
+    max-height: 100%;
+    overflow: auto;
+    box-sizing: border-box;
 }
