--- a/public/style.css
+++ b/public/style.css
@@ -180,21 +180,45 @@ th {
     border-radius: 0.2em;
 }
 
-#topic-list-cards {
+#topic-list-header {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+#search-topics-container {
+    position: relative;
+}
+
+#search-topics-input {
+    padding-right: 20px;
+}
+
+#clear-search-topics {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: #999;
+}
+
+#topic-list-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(13em, 1fr));
+    gap: 0.5em;
     padding-top: 1em;
 }
 
 .topic-card {
     border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 0.3em 0.5em;
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    width: 12em;
 }
 
 .topic-card:hover {
