--- a/public/theme-autumn.css
+++ b/public/theme-autumn.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #fb923c;
-    --color-border-secondary: #d1d5db;
+    --color-border-secondary: #fbbf24;
     --color-border-accent: #ea580c;
     
     /* Link colors */
