--- a/public/theme-blue.css
+++ b/public/theme-blue.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #90cdf4;
-    --color-border-secondary: #a0aec0;
+    --color-border-secondary: #bfdbfe;
     --color-border-accent: #3182ce;
     
     /* Link colors */
