--- a/public/theme-green.css
+++ b/public/theme-green.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #9ae6b4;
-    --color-border-secondary: #a0aec0;
+    --color-border-secondary: #a7f3d0;
     --color-border-accent: #38a169;
     
     /* Link colors */
