--- a/public/theme-ocean.css
+++ b/public/theme-ocean.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #67e8f9;
-    --color-border-secondary: #94a3b8;
+    --color-border-secondary: #a5f3fc;
     --color-border-accent: #0891b2;
     
     /* Link colors */
