--- a/public/theme-red.css
+++ b/public/theme-red.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #fc8181;
-    --color-border-secondary: #a0aec0;
+    --color-border-secondary: #fca5a5;
     --color-border-accent: #e53e3e;
     
     /* Link colors */
