--- a/public/theme-spring.css
+++ b/public/theme-spring.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #9ae6b4;
-    --color-border-secondary: #a0aec0;
+    --color-border-secondary: #bbf7d0;
     --color-border-accent: #48bb78;
     
     /* Link colors */
