--- a/public/theme-summer.css
+++ b/public/theme-summer.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #fdba74;
-    --color-border-secondary: #d1d5db;
+    --color-border-secondary: #fed7aa;
     --color-border-accent: #f59e0b;
     
     /* Link colors */
