--- a/public/theme-winter.css
+++ b/public/theme-winter.css
@@ -17,7 +17,7 @@
     
     /* Border colors */
     --color-border-primary: #cbd5e1;
-    --color-border-secondary: #94a3b8;
+    --color-border-secondary: #e2e8f0;
     --color-border-accent: #475569;
     
     /* Link colors */
